drift improvements (#28)
